--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 <body>
     <span class="cabeçalho__menu-hamburguer"></span>
 <img src="img/Logo.svg" alt="Logo da Alurabooks">
+<span class="cabeçalho__menu-hamburguer"></span>
+<a href="#"><img src="img/Logo.svg alt="Logo da Alurabooks">
+<a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+<a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+<a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
 </body>
 </html>
