--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <span class="cabeçalho__menu-hamburguer"></span>
-<img src="img/Logo.svg" alt="Logo da Alurabooks">
-<span class="cabeçalho__menu-hamburguer"></span>
-<a href="#"><img src="img/Logo.svg alt="Logo da Alurabooks">
-<a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-<a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-<a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+<header class="cabeçalho">
+<div class="container">
+<span class="cabeçalho__menu-hamburguer container_imagem"></span>
+<img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
+</div>
+<div class="conteiner">
+<a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container_imagem"></a>
+<a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container_imagem"></a>
+<a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container_imagem"></a>
+</div>
+  </header>
 </body>
 </html>
