--- a/alura-books-main/alura-books-main/index.html
+++ b/alura-books-main/alura-books-main/index.html
@@ -8,15 +8,13 @@
   <link rel="stylesheet" href="reset.css">
 </head>
 <body>
+   <header class="cabeçalho">
+    <div class="container">
     <span class="cabeçalho__menu-hamburguer"></span>
-    <div class="container"></div>
-<img src="img/Logo.svg" alt="Logo da Alurabooks">
-<div>
-<a href="#"><img src="img/Logo.svg alt="Logo da Alurabooks class="container__imagem"></a> 
-<a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"class="container__imagem"></a>
-<a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"class="container__imagem"></a>
-<a href="#"><img src="img/Usuário.svg" alt="Meu perfil"class="container__imagem"></a>
-</div>
-<header>
+    <img src="img/Logo.svg" alt="Logo da Alurabooks">
+<a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+<a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+<a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+    </header>
 </body>
 </html>
