--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
   <title>AluraBooks</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https:fonts.gstatic.com" crossorigin>
+ <link href="https:fonts.googleapis.com/
+
+ css2?family=poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="cabeçalho">
 <div class="container">
+  <input type="checkbox" id="menu" class="container_botao">
+  
 <span class="cabeçalho__menu-hamburguer container_imagem"></span>
 <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
 </div>
