--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
 <body>
 <header class="cabeçalho">
 <div class="container">
-  <input type="checkbox" id="menu" class="container_botao">
+<input type="checkbox" id="menu" class="container_botao">
+</label for="menu">
+<span class="cabeçalho__menu-hamburguer container_imagem"></span>
+</label>
+<ul class="lista-menu">
+<li class="lista-menu_titulo">categorias</li>
+<li class="lista-menu-item">
+    <a href="#" class="lista-menu_link"programação></a>
+</li>
+<li class="lista-menu-item">
+<a href="#"class="lista-menu-link">Front-end</a>
+</li>
+<li class="lista-menu-item">
+<a href="#" class="lista-menu-link">Infraestrutura</a>
+</li>
+<li class="lista-menu-item">
+  <a href="#" class="lista-menu-link">Businesses</a>
   
 <span class="cabeçalho__menu-hamburguer container_imagem"></span>
 <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
