--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 <a href="#" class="lista-menu-link">Infraestrutura</a>
 </li>
 <li class="lista-menu-item">
-  <a href="#" class="lista-menu-link">Businesses</a>
+<a href="#" class="lista-menu-link">Businesses</a>
+</li>
+<li class="lista-menu-item">
+<a href="#" class="lista-menu-link">Design & UX</a>
   
 <span class="cabeçalho__menu-hamburguer container_imagem"></span>
 <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
